renamed RpiLED.GUI to RpiLED.Gui

--- a/RpiLED.GUI/Views/LED_control.axaml
+++ b/RpiLED.GUI/Views/LED_control.axaml
@@ -3,7 +3,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d" d:DesignWidth="150" d:DesignHeight="100"
-             x:Class="RpiLED.GUI.Views.LED_control">
+             x:Class="RpiLED.Gui.Views.LED_control">
     <StackPanel HorizontalAlignment="Center" Background="#191919">
         <VirtualizingStackPanel HorizontalAlignment="Center">
             <TextBlock>Pin #</TextBlock>
