--- a/RpiLED.GUI/App.axaml
+++ b/RpiLED.GUI/App.axaml
@@ -1,7 +1,7 @@
 <Application xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="using:RpiLED.GUI"
-             x:Class="RpiLED.GUI.App">
+             xmlns:local="using:RpiLED.Gui"
+             x:Class="RpiLED.Gui.App">
     <Application.DataTemplates>
         <local:ViewLocator/>
     </Application.DataTemplates>
