--- a/RpiLED.GUI/Views/MainWindow.axaml
+++ b/RpiLED.GUI/Views/MainWindow.axaml
@@ -1,10 +1,10 @@
 <Window xmlns="https://github.com/avaloniaui"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:vm="using:RpiLED.GUI.ViewModels"
+        xmlns:vm="using:RpiLED.Gui.ViewModels"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-        x:Class="RpiLED.GUI.Views.MainWindow"
+        x:Class="RpiLED.Gui.Views.MainWindow"
         Icon="/Assets/avalonia-logo.ico"
         Title="RpiLED.GUI">
 
