added a new view for a shiftregister test renamed MainWindow to MainWindowView for automatic discovery in avalonia app now starts in dark mode instead of light

--- a/RpiLED.Gui/Views/MainWindowView.axaml
+++ b/RpiLED.Gui/Views/MainWindowView.axaml
@@ -3,8 +3,9 @@
         xmlns:vm="using:RpiLed.Gui.ViewModels"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:views="clr-namespace:RpiLed.Gui.Views"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-        x:Class="RpiLed.Gui.Views.MainWindow"
+        x:Class="RpiLed.Gui.Views.MainWindowView"
         Icon="/Assets/avalonia-logo.ico"
         Title="RpiLed.Gui">
 
@@ -12,6 +13,8 @@
         <vm:MainWindowViewModel/>
     </Design.DataContext>
 
+    <!--
     <TextBlock Text="{Binding Greeting}" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-
+    -->
+    <views:ShiftRegisterView />
 </Window>
